--- a/portfolio_optimisation.ipynb
+++ b/portfolio_optimisation.ipynb
@@ -1059,6 +1059,72 @@
     "ticker_list = list(ticker_data[\"Code\"] + \".US\") # Easier to plug into EOD api call\n",
     "ticker_list\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Part 2: Conditional Portfolio Optimisation</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.0856306   0.99734545  0.2829785  -1.50629471 -0.57860025  1.65143654\n",
+      " -2.42667924 -0.42891263  1.26593626 -0.8667404 ]\n",
+      "[-0.67888615 -0.09470897  1.49138963 -0.638902   -0.44398196 -0.43435128\n",
+      "  2.20593008  2.18678609  1.0040539   0.3861864   0.73736858]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.13102032113541398"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We first want to define a few objective functions we are trying to maximise\n",
+    "def alpha(rp: float, rm: float, rf_rate: float, beta: float) -> float:\n",
+    "    \"\"\"\n",
+    "    rp: the return of the portfolio\n",
+    "    rm: the return of the market\n",
+    "    rf_rate: the risk free rate\n",
+    "    beta: assets beta\n",
+    "    \"\"\"\n",
+    "    return (rp - rf_rate - beta * (rm - rf_rate))\n",
+    "def beta(asset_price_series:list[float], market_price_series:list[float]) -> float:\n",
+    "    if len(asset_price_series) > len(market_price_series):\n",
+    "        asset_price_series = asset_price_series[len(asset_price_series) - len(market_price_series):]\n",
+    "    elif len(market_price_series) > len(asset_price_series):\n",
+    "        market_price_series = market_price_series[len(market_price_series) - len(asset_price_series):]\n",
+    "    covariance: float = np.sum((asset_price_series - np.mean(asset_price_series)) * (market_price_series - np.mean(market_price_series))) / len(asset_price_series)\n",
+    "    variance: float = np.var(market_price_series)\n",
+    "    return covariance / variance\n",
+    "\n",
+    "# Demonstration\n",
+    "np.random.seed(123)\n",
+    "series_1 = np.random.randn(10)\n",
+    "\n",
+    "series_2 = np.random.randn(11)\n",
+    "b = beta(series_1, series_2)\n",
+    "rp = (series_1[-1] - series_1[0]) / series_1[0]\n",
+    "rm = (series_2[-1] - series_2[0]) / series_2[0]\n",
+    "rf_rate = 4.2/100\n",
+    "print(series_1)\n",
+    "print(series_2)\n",
+    "alpha(rp, rm, rf_rate, b)"
+   ]
   }
  ],
  "metadata": {
